---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: cannot break outside of loop
   ╭─[<test>:1:1]
   │
 1 │ break
   │ ──┬──  
   │   ╰──── invalid when there are no loop scopes
───╯

